feat:对cart相关函数还原

--- a/1.html
+++ b/1.html
@@ -267,6 +267,7 @@
                 document.querySelector('.bg').style.display = 'none'
             }
         }
+        //TODO tye
         const loading = new Load()
     </script>
 </html>
